--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "deploy": "zmp deploy"
   },
   "dependencies": {
+    "firebase": "^11.5.0",
     "jotai": "^2.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -28,13 +29,13 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.38",
+    "postcss": "^8.5.3",
     "postcss-cli": "^8.3.1",
     "postcss-preset-env": "^10.1.5",
     "sass": "^1.76.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.2.13",
     "zmp-vite-plugin": "latest"
   }
